--- a/index.html
+++ b/index.html
@@ -186,6 +186,32 @@
       <p>Official Deposit No: <strong>9670814522</strong></p>
     </div>
   </section>
+  <section class="features">
+  <div class="card">
+    <h3>🎲 JokerLudo Official Group</h3>
+    <p>Join our official trusted group</p>
+    <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Now</a>
+  </div>
+</section>
+
+<section class="features">
+  <h2 style="text-align:center; width: 100%; margin-bottom: 20px;">🔥 Approved Groups</h2>
+
+  <div class="card">
+    <h3>Group Name 1</h3>
+    <p>Join now and win!</p>
+    <a href="https://chat.whatsapp.com/XXXX" class="join-btn">Join Group</a>
+  </div>
+
+  <div class="card">
+    <h3>Group Name 2</h3>
+    <p>Earn daily with fun</p>
+    <a href="https://chat.whatsapp.com/YYYY" class="join-btn">Join Group</a>
+  </div>
+
+  <!-- More groups here... -->
+</section>
+
 
   <footer>
     <div>© 2025 JokerLudo Group. All Rights Reserved.</div>
