--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
   <section class="hero">
     <h1>Welcome to JokerLudo Group! 🎉</h1>
     <p>Make Your Luck with JokerLudo – India’s Trusted Ludo Earning Platform!</p>
-    <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Now</a> <br><br>
-    <a href="addgroup.html" class="join-btn" style="background: #ff5722;">Add Your Group</a>
+    <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Now
+    href="addgroup.html" class="join-btn" style="background: #ff5722;">Add Your Group</a>
   </section>
 
   <section class="features">
