--- a/index.html
+++ b/index.html
@@ -2,31 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>JokerLudo Group | Trusted Ludo Earning Platform</title>
+  <meta name="description" content="Join JokerLudo – India’s Trusted Ludo Earning Group. Quick withdrawals, 24x7 support, and real money games!">
+  <meta name="keywords" content="Ludo, JokerLudo, Earn Money Playing Ludo, Ludo WhatsApp Group, Ludo Star, Ludo Group Link, Fast Ludo Payment, Real Cash Games India">
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="JokerLudo Group">
 
-  <title>Whatsapp Ludo Group Link | JokerLudo Group</title>
-  <meta name="description" content="Join JokerLudo WhatsApp Groups for daily real cash Ludo games. 100% trusted and active groups in India. Instant withdrawals and 24x7 support.">
-  <meta name="keywords" content="Ludo WhatsApp Group, Ludo Earning App, Joker Ludo, WhatsApp Ludo Link, Ludo Game Online, Real Cash Ludo">
-  <meta name="robots" content="index, follow" />
-  <meta name="author" content="JokerLudo Team">
-
-  <!-- Open Graph -->
-  <meta property="og:title" content="Join Ludo WhatsApp Groups | JokerLudo" />
-  <meta property="og:description" content="Get the best WhatsApp Ludo group links to play real matches & earn money. 24x7 support. Fast payouts. Trusted by thousands." />
-  <meta property="og:url" content="https://ludogrouplink.com/" />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://via.placeholder.com/1200x630.png?text=JokerLudo+Group" />
-
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Join Ludo WhatsApp Group | JokerLudo" />
-  <meta name="twitter:description" content="Join trusted JokerLudo WhatsApp groups for real cash ludo matches. Add your group too!" />
-  <meta name="twitter:image" content="https://via.placeholder.com/1200x630.png?text=JokerLudo+Group" />
-
-  <!-- Favicon (optional) -->
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
-
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EZF7SRX6EJ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-EZF7SRX6EJ');
+  </script>
+
   <style>
     * {
       margin: 0;
