--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Basic Meta Tags -->
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>JokerLudo Group | Trusted Ludo Earning Platform</title>
-  <meta name="description" content="Join JokerLudo – India’s Trusted Ludo Earning Group. Quick withdrawals, 24x7 support, and real money games!">
-  <meta name="keywords" content="Ludo, JokerLudo, Earn Money Playing Ludo, Ludo WhatsApp Group, Ludo Star, Ludo Group Link, Fast Ludo Payment, Real Cash Games India">
-  <meta name="robots" content="index, follow">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Join JokerLudo – India’s #1 Trusted Ludo Earning Group. Quick withdrawals, verified groups, 24x7 support!">
+  <meta name="keywords" content="Ludo Earning, JokerLudo, Ludo WhatsApp Group, Win Real Money, LudoStar, FastWin Ludo">
   <meta name="author" content="JokerLudo Group">
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+  <!-- Open Graph (Social Sharing) -->
+  <meta property="og:title" content="JokerLudo Group – Trusted Ludo Earning Platform" />
+  <meta property="og:description" content="Make Your Luck with JokerLudo – Join now & earn real cash from Ludo!" />
+  <meta property="og:image" content="https://ludogrouplink.com/images/banner.jpg" />
+  <meta property="og:url" content="https://ludogrouplink.com" />
+  <meta property="og:type" content="website" />
+
+  <!-- Favicon -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+
+  <!-- Title -->
+  <title>JokerLudo Group – Trusted Ludo Earning WhatsApp Groups</title>
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet" />
 
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-EZF7SRX6EJ"></script>
@@ -22,6 +34,7 @@
   </script>
 
   <style>
+    /* Your CSS remains unchanged from the last version */
     * {
       margin: 0;
       padding: 0;
