--- a/contact.html
+++ b/contact.html
@@ -1,33 +1,207 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Meta Tags -->
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>JokerLudo | Contact</title>
-  <link rel="stylesheet" href="css/contact.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Contact JokerLudo Group – Reach out for support, queries, or to promote your Ludo group.">
+  <meta name="keywords" content="Contact JokerLudo, JokerLudo Support, Ludo WhatsApp Group Help">
+  <meta name="author" content="JokerLudo Group">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Contact JokerLudo – Get Support or Add Your Group" />
+  <meta property="og:description" content="Need help or want to list your Ludo group? Contact JokerLudo now!" />
+  <meta property="og:url" content="https://ludogrouplink.com/contact.html" />
+  <meta property="og:type" content="website" />
+
+  <!-- Title -->
+  <title>Contact JokerLudo – Support & Group Submission</title>
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EZF7SRX6EJ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-EZF7SRX6EJ');
+  </script>
+
+  <!-- Styles -->
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f5ff;
+      color: #333;
+    }
+
+    .navbar {
+      background: #2d2e52;
+      padding: 25px 20px 10px;
+      text-align: center;
+    }
+
+    .logo {
+      font-size: 34px;
+      font-weight: 700;
+      color: #fff;
+      margin-bottom: 15px;
+      display: block;
+      text-decoration: none;
+    }
+
+    .nav-links {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 15px;
+      margin-bottom: 10px;
+    }
+
+    .nav-links a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 500;
+      padding: 8px 14px;
+      border-radius: 5px;
+      transition: background 0.3s;
+    }
+
+    .nav-links a:hover {
+      background: #ffde59;
+      color: #2d2e52;
+    }
+
+    .container {
+      max-width: 600px;
+      margin: 40px auto;
+      padding: 20px;
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+    }
+
+    h2 {
+      text-align: center;
+      margin-bottom: 20px;
+      color: #2d2e52;
+    }
+
+    form label {
+      display: block;
+      margin-top: 15px;
+      font-weight: 500;
+    }
+
+    input, textarea {
+      width: 100%;
+      padding: 12px;
+      margin-top: 5px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      font-size: 16px;
+    }
+
+    button {
+      background: #2d2e52;
+      color: #fff;
+      padding: 12px 20px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      margin-top: 20px;
+      font-size: 16px;
+      width: 100%;
+    }
+
+    button:hover {
+      background: #1a1a3a;
+    }
+
+    footer {
+      background: #2d2e52;
+      color: #fff;
+      padding: 15px 10px;
+      text-align: center;
+      font-size: 14px;
+      margin-top: 40px;
+    }
+
+    .footer-links {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 15px;
+      margin-bottom: 8px;
+    }
+
+    .footer-links a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 500;
+      transition: color 0.3s;
+    }
+
+    .footer-links a:hover {
+      color: #ffde59;
+    }
+
+    @media (max-width: 768px) {
+      .nav-links {
+        gap: 10px;
+      }
+
+      .container {
+        margin: 20px;
+      }
+    }
+  </style>
 </head>
 <body>
 
   <nav class="navbar">
-    <div class="logo">🎲 JokerLudo</div>
-    <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="rules.html">Rules</a></li>
-      <li><a href="join.html">Join</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="privacy.html">Privacy</a></li>
-    </ul>
+    <a href="index.html" class="logo">🎲 JokerLudo Group</a>
+    <div class="nav-links">
+      <a href="index.html">Home</a>
+      <a href="rules.html">Rules</a>
+      <a href="join.html">Join</a>
+      <a href="addgroup.html">Add Group</a>
+      <a href="contact.html">Contact</a>
+      <a href="privacy.html">Privacy</a>
+    </div>
   </nav>
 
-  <section class="contact-section">
-    <h2>Contact JokerLudo Team</h2>
-    <p>📞 Phone: <strong>9670814522</strong></p>
-    <p>📲 WhatsApp: <strong>Click on Join Now</strong></p>
-    <p>📧 Email: support@jokerludo.in</p>
-  </section>
+  <div class="container">
+    <h2>📞 Contact Us</h2>
+    <p style="text-align: center;">Have a question, feedback, or want to list your group? Reach out now!</p>
 
-  <footer class="footer">
+    <form action="mailto:your-email@example.com" method="post" enctype="text/plain">
+      <label for="name">Name *</label>
+      <input type="text" id="name" name="name" required>
+
+      <label for="email">Email *</label>
+      <input type="email" id="email" name="email" required>
+
+      <label for="message">Message *</label>
+      <textarea id="message" name="message" rows="5" required></textarea>
+
+      <button type="submit">Send Message</button>
+    </form>
+  </div>
+
+  <footer>
+    <div class="footer-links">
+      <a href="index.html">Home</a>
+      <a href="rules.html">Rules</a>
+      <a href="join.html">Join</a>
+      <a href="addgroup.html">Add Group</a>
+      <a href="privacy.html">Privacy</a>
+      <a href="contact.html">Contact</a>
+    </div>
     <p>© 2025 JokerLudo Group. All Rights Reserved.</p>
   </footer>
 
