--- a/privacy.html
+++ b/privacy.html
@@ -2,157 +2,177 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Privacy Policy - JokerLudo</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Privacy Policy for JokerLudo. Learn how your information is collected and protected.">
+  <meta name="keywords" content="privacy, policy, JokerLudo, data protection">
+  <meta name="author" content="JokerLudo Group">
 
+  <meta property="og:title" content="Privacy Policy – JokerLudo" />
+  <meta property="og:description" content="Read JokerLudo's privacy policy and how your data is handled." />
+  <meta property="og:url" content="https://ludogrouplink.com/privacy.html" />
+  <meta property="og:type" content="website" />
+
+  <title>Privacy Policy – JokerLudo</title>
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EZF7SRX6EJ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-EZF7SRX6EJ');
+  </script>
+
+  <!-- Styles -->
+  <style>
     body {
       font-family: 'Poppins', sans-serif;
-      background: #f9f9ff;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f5ff;
       color: #333;
-      line-height: 1.6;
     }
 
     .navbar {
       background: #2d2e52;
-      color: #fff;
-      padding: 15px 30px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-wrap: wrap;
+      padding: 25px 20px 10px;
+      text-align: center;
     }
 
     .logo {
-      font-size: 24px;
-      font-weight: 600;
+      font-size: 34px;
+      font-weight: 700;
+      color: #fff;
+      margin-bottom: 15px;
+      display: block;
+      text-decoration: none;
     }
 
     .nav-links {
-      list-style: none;
       display: flex;
-      gap: 20px;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 15px;
+      margin-bottom: 10px;
     }
 
     .nav-links a {
       color: #fff;
       text-decoration: none;
       font-weight: 500;
-      transition: color 0.3s ease;
+      padding: 8px 14px;
+      border-radius: 5px;
+      transition: background 0.3s;
     }
 
     .nav-links a:hover {
-      color: #ffde59;
-    }
-
-    .page-header {
-      background: linear-gradient(to right, #fceabb, #f8b500);
-      padding: 40px 20px;
-      text-align: center;
+      background: #ffde59;
       color: #2d2e52;
     }
 
-    .page-header h1 {
-      font-size: 32px;
-      margin-bottom: 10px;
-    }
-
-    .content {
-      max-width: 800px;
-      margin: 30px auto;
+    .container {
+      max-width: 900px;
+      margin: 40px auto;
       padding: 20px;
       background: #fff;
-      border-radius: 15px;
+      border-radius: 12px;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
     }
 
-    .content h3 {
-      margin-top: 25px;
+    h2 {
+      text-align: center;
+      margin-bottom: 25px;
       color: #2d2e52;
-      font-size: 20px;
     }
 
-    .content p {
-      margin-top: 10px;
-      font-size: 16px;
+    p {
+      line-height: 1.6;
+      margin-bottom: 15px;
     }
 
-    .content a {
-      color: #2d2e52;
-      text-decoration: underline;
-    }
-
-    .footer {
+    footer {
       background: #2d2e52;
       color: #fff;
+      padding: 15px 10px;
       text-align: center;
-      padding: 20px 0;
+      font-size: 14px;
       margin-top: 40px;
     }
 
-    @media (max-width: 768px) {
-      .nav-links {
-        flex-direction: column;
-        gap: 10px;
-        margin-top: 10px;
-      }
+    .footer-links {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 15px;
+      margin-bottom: 8px;
+    }
+
+    .footer-links a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 500;
+      transition: color 0.3s;
+    }
+
+    .footer-links a:hover {
+      color: #ffde59;
     }
   </style>
 </head>
 <body>
 
   <nav class="navbar">
-    <div class="logo">🎲 JokerLudo</div>
-    <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="rules.html">Rules</a></li>
-      <li><a href="join.html">Join Group</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="privacy.html">Privacy</a></li>
-    </ul>
+    <a href="index.html" class="logo">🎲 JokerLudo Group</a>
+    <div class="nav-links">
+      <a href="index.html">Home</a>
+      <a href="rules.html">Rules</a>
+      <a href="join.html">Join</a>
+      <a href="addgroup.html">Add Group</a>
+      <a href="contact.html">Contact</a>
+      <a href="privacy.html">Privacy</a>
+    </div>
   </nav>
 
-  <section class="page-header">
-    <h1>🔒 Privacy Policy</h1>
-    <p>Your Trust, Our Priority.</p>
-  </section>
+  <div class="container">
+    <h2>🔒 Privacy Policy</h2>
 
-  <section class="content">
-    <h3>🔐 User Data</h3>
-    <p>
-      JokerLudo kisi bhi user ka personal data (name, number, wallet details, etc.) kisi third-party ke sath share nahi karta. Saari information sirf group ke andar ke use ke liye hoti hai.
-    </p>
+    <p>At JokerLudo (https://ludogrouplink.com), your privacy is important to us. This Privacy Policy outlines what personal information is collected and how it is used.</p>
 
-    <h3>📲 Payment Security</h3>
-    <p>
-      Sirf ek hi official deposit number hai: <strong>9670814522</strong>. Iske alawa kisi aur number par paisa bhejna aapki zimmedari hogi.
-    </p>
+    <h3>Information We Collect</h3>
+    <p>We may collect your name and email address if you choose to contact us through our form. We do not collect any sensitive personal data.</p>
 
-    <h3>📸 Media Sharing</h3>
-    <p>
-      Jo bhi screenshots aap group me share karte hain (winning, payment proof, etc.) woh sirf group activity ke liye store kiye jaate hain. Yeh data kisi aur jagah use nahi hota.
-    </p>
+    <h3>How We Use Information</h3>
+    <p>Your data is used solely for communication purposes – we do not share, sell, or rent your information to third parties.</p>
 
-    <h3>🚫 Fake Activities</h3>
-    <p>
-      Agar koi user fake screenshot, fraud attempt, ya abuse karta hai to uska data block kiya jaayega aur zarurat padne par action liya jaayega.
-    </p>
+    <h3>Cookies</h3>
+    <p>This website may use cookies for analytics and improving your experience. You can disable cookies in your browser settings.</p>
 
-    <h3>📩 Privacy Concerns?</h3>
-    <p>
-      Agar aapko kisi bhi privacy concern ya data handling se sambandhit baat karni ho to humse contact karein:<br>
-      Email: <a href="mailto:jokerludo01@gmail.com">jokerludo01@gmail.com</a>
-    </p>
-  </section>
+    <h3>Third-Party Services</h3>
+    <p>We use Google Analytics to track anonymous usage data to improve site performance. This data is never linked to your personal identity.</p>
 
-  <footer class="footer">
-    <p>© 2025 JokerLudo Group | Privacy First, Trust Always.</p>
+    <h3>Data Security</h3>
+    <p>We take all necessary steps to protect your data. However, no method of transmission over the Internet is 100% secure.</p>
+
+    <h3>Changes to This Policy</h3>
+    <p>We may update this policy from time to time. Please revisit this page for the latest information.</p>
+
+    <h3>Contact Us</h3>
+    <p>If you have any questions about this Privacy Policy, feel free to <a href="contact.html">contact us</a>.</p>
+  </div>
+
+  <footer>
+    <div class="footer-links">
+      <a href="index.html">Home</a>
+      <a href="rules.html">Rules</a>
+      <a href="join.html">Join</a>
+      <a href="addgroup.html">Add Group</a>
+      <a href="privacy.html">Privacy</a>
+      <a href="contact.html">Contact</a>
+    </div>
+    <p>© 2025 JokerLudo Group. All Rights Reserved.</p>
   </footer>
 
 </body>
