--- a/rules.html
+++ b/rules.html
@@ -2,90 +2,168 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>JokerLudo - Rules</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="JokerLudo WhatsApp group rules – fair play, no cheating, and active participation only.">
+  <meta name="keywords" content="jokerludo, group rules, ludo rules, whatsapp ludo">
+  <meta name="author" content="JokerLudo Group">
+
+  <meta property="og:title" content="Group Rules – JokerLudo" />
+  <meta property="og:description" content="Read the official JokerLudo rules before joining a group to ensure fair gameplay." />
+  <meta property="og:url" content="https://ludogrouplink.com/rules.html" />
+  <meta property="og:type" content="website" />
+
+  <title>Group Rules – JokerLudo</title>
+
+  <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EZF7SRX6EJ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-EZF7SRX6EJ');
+  </script>
+
+  <!-- Styles -->
   <style>
     body {
-      margin: 0;
       font-family: 'Poppins', sans-serif;
-      background: #f9f9ff;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f5ff;
+      color: #333;
     }
-    header {
-      background: #2d2e52;
-      color: #fff;
-      padding: 20px 10px;
-      text-align: center;
-      font-size: 28px;
-      font-weight: 700;
-      cursor: pointer;
-    }
+
     .navbar {
+      background: #2d2e52;
+      padding: 25px 20px 10px;
+      text-align: center;
+    }
+
+    .logo {
+      font-size: 34px;
+      font-weight: 700;
+      color: #fff;
+      margin-bottom: 15px;
+      display: block;
+      text-decoration: none;
+    }
+
+    .nav-links {
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
-      background: #ffffff;
-      border-bottom: 2px solid #2d2e52;
-      padding: 10px 0;
+      gap: 15px;
+      margin-bottom: 10px;
     }
-    .navbar a {
-      margin: 0 12px;
+
+    .nav-links a {
+      color: #fff;
       text-decoration: none;
+      font-weight: 500;
+      padding: 8px 14px;
+      border-radius: 5px;
+      transition: background 0.3s;
+    }
+
+    .nav-links a:hover {
+      background: #ffde59;
       color: #2d2e52;
-      font-weight: 600;
     }
-    .navbar a:hover {
-      color: #ff5722;
+
+    .container {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 20px;
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
     }
-    .content {
-      padding: 40px 20px;
-      max-width: 800px;
-      margin: auto;
-      line-height: 1.8;
-    }
-    .content h2 {
+
+    h2 {
       text-align: center;
-      margin-bottom: 20px;
+      margin-bottom: 25px;
       color: #2d2e52;
     }
-    .content ul {
-      list-style: disc;
+
+    ul {
       padding-left: 20px;
     }
+
+    li {
+      margin-bottom: 12px;
+      line-height: 1.6;
+    }
+
     footer {
       background: #2d2e52;
-      color: white;
-      text-align: center;
+      color: #fff;
       padding: 15px 10px;
+      text-align: center;
+      font-size: 14px;
       margin-top: 40px;
+    }
+
+    .footer-links {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 15px;
+      margin-bottom: 8px;
+    }
+
+    .footer-links a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 500;
+      transition: color 0.3s;
+    }
+
+    .footer-links a:hover {
+      color: #ffde59;
     }
   </style>
 </head>
 <body>
 
-  <header onclick="window.location.href='index.html'">🎲 JokerLudo Group</header>
-
   <nav class="navbar">
-    <a href="index.html">Home</a>
-    <a href="rules.html">Rules</a>
-    <a href="join.html">Join</a>
-    <a href="addgroup.html">Add Group</a>
-    <a href="contact.html">Contact</a>
-    <a href="privacy.html">Privacy</a>
+    <a href="index.html" class="logo">🎲 JokerLudo Group</a>
+    <div class="nav-links">
+      <a href="index.html">Home</a>
+      <a href="rules.html">Rules</a>
+      <a href="join.html">Join</a>
+      <a href="addgroup.html">Add Group</a>
+      <a href="contact.html">Contact</a>
+      <a href="privacy.html">Privacy</a>
+    </div>
   </nav>
 
-  <section class="content">
-    <h2>Game Rules & Guidelines</h2>
+  <div class="container">
+    <h2>📋 JokerLudo Group Rules</h2>
     <ul>
-      <li>✅ Har player ko fair game play karna zaroori hai.</li>
-      <li>✅ Koi bhi hacking ya cheating detect hone par account ban ho sakta hai.</li>
-      <li>✅ Withdrawal sirf game jeetne ke baad hi milega.</li>
-      <li>✅ Group ke rules follow karna sabhi members ke liye mandatory hai.</li>
-      <li>✅ Admin ka decision final hoga kisi bhi confusion mein.</li>
+      <li><strong>No Cheating:</strong> Strictly no use of mods, hacks, or unfair tactics. Offenders will be removed instantly.</li>
+      <li><strong>Respect All Players:</strong> Offensive language, bullying, or personal attacks are not tolerated.</li>
+      <li><strong>Payment Time:</strong> If playing with money, winners must be paid within 15 minutes after the match ends.</li>
+      <li><strong>Screenshot Proof:</strong> Always upload match result screenshots for transparency.</li>
+      <li><strong>Only Active Players:</strong> Inactive members will be removed after 2 days of no activity.</li>
+      <li><strong>Admin Decision Final:</strong> Group admin has full rights to remove or block users if rules are broken.</li>
+      <li><strong>No Spam:</strong> Don’t post irrelevant links or promotions unless allowed by the admin.</li>
+      <li><strong>One Account Per Person:</strong> Multiple accounts for cheating will be banned.</li>
     </ul>
-  </section>
+    <p>✅ By joining any JokerLudo group, you agree to follow these rules. Let's keep the community fair and fun!</p>
+  </div>
 
   <footer>
+    <div class="footer-links">
+      <a href="index.html">Home</a>
+      <a href="rules.html">Rules</a>
+      <a href="join.html">Join</a>
+      <a href="addgroup.html">Add Group</a>
+      <a href="privacy.html">Privacy</a>
+      <a href="contact.html">Contact</a>
+    </div>
     <p>© 2025 JokerLudo Group. All Rights Reserved.</p>
   </footer>
 
