--- a/join.html
+++ b/join.html
@@ -3,94 +3,145 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Join JokerLudo Group</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <meta name="description" content="Join active JokerLudo WhatsApp groups for competitive Ludo matches and tournaments.">
+  <meta name="keywords" content="ludo group join, whatsapp ludo group, jokerludo join link">
+  <meta name="author" content="JokerLudo Group">
+  
+  <meta property="og:title" content="Join Ludo Groups – JokerLudo" />
+  <meta property="og:description" content="Join our verified and active JokerLudo WhatsApp groups for daily Ludo challenges." />
+  <meta property="og:url" content="https://ludogrouplink.com/join.html" />
+  <meta property="og:type" content="website" />
+
+  <title>Join WhatsApp Groups – JokerLudo</title>
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EZF7SRX6EJ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-EZF7SRX6EJ');
+  </script>
+
+  <!-- Styles -->
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: 'Poppins', sans-serif;
-      background: #fdfdfd;
-      color: #333;
-      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+      background-color: #f9faff;
     }
+
     .navbar {
       background: #2d2e52;
-      padding: 15px 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-wrap: wrap;
+      padding: 25px 20px 10px;
+      text-align: center;
     }
+
     .logo {
-      font-size: 26px;
+      font-size: 34px;
       font-weight: 700;
       color: #fff;
+      margin-bottom: 15px;
+      display: block;
       text-decoration: none;
     }
+
     .nav-links {
       display: flex;
-      gap: 15px;
+      justify-content: center;
       flex-wrap: wrap;
+      gap: 15px;
     }
+
     .nav-links a {
       color: #fff;
       text-decoration: none;
       font-weight: 500;
-      padding: 8px 12px;
-      border-radius: 6px;
+      padding: 8px 14px;
+      border-radius: 5px;
       transition: background 0.3s;
     }
+
     .nav-links a:hover {
       background: #ffde59;
       color: #2d2e52;
     }
-    .join-container {
-      text-align: center;
-      padding: 60px 20px;
+
+    .container {
+      max-width: 1000px;
+      margin: 40px auto;
+      padding: 20px;
     }
-    .join-container h1 {
-      font-size: 30px;
+
+    .group-card {
+      background: #fff;
+      border-radius: 12px;
+      padding: 25px;
       margin-bottom: 20px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+    }
+
+    .group-card h3 {
+      margin-top: 0;
       color: #2d2e52;
     }
-    .join-container p {
-      font-size: 18px;
-      margin-bottom: 30px;
+
+    .group-card p {
+      margin: 10px 0;
     }
+
     .join-btn {
+      display: inline-block;
       background: #2d2e52;
       color: #fff;
-      padding: 12px 25px;
+      padding: 10px 18px;
       border-radius: 8px;
       text-decoration: none;
-      font-weight: bold;
-      transition: 0.3s ease;
-      display: inline-block;
+      transition: background 0.3s;
     }
+
     .join-btn:hover {
-      background: #1a1a3a;
-      transform: scale(1.05);
+      background: #ffde59;
+      color: #2d2e52;
     }
+
     footer {
       background: #2d2e52;
       color: #fff;
-      padding: 20px;
+      padding: 15px 10px;
       text-align: center;
       font-size: 14px;
+      margin-top: 40px;
     }
-    @media (max-width: 768px) {
-      .nav-links {
-        justify-content: center;
-        width: 100%;
-        margin-top: 10px;
-      }
+
+    .footer-links {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 15px;
+      margin-bottom: 8px;
+    }
+
+    .footer-links a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 500;
+      transition: color 0.3s;
+    }
+
+    .footer-links a:hover {
+      color: #ffde59;
     }
   </style>
 </head>
 <body>
 
   <nav class="navbar">
-    <a href="index.html" class="logo">🎲 JokerLudo</a>
+    <a href="index.html" class="logo">🎲 JokerLudo Group</a>
     <div class="nav-links">
       <a href="index.html">Home</a>
       <a href="rules.html">Rules</a>
@@ -101,13 +152,43 @@
     </div>
   </nav>
 
-  <div class="join-container">
-    <h1>Join Our Official WhatsApp Group</h1>
-    <p>Click below to become part of India's trusted Ludo earning platform!</p>
-    <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c" class="join-btn">Join Now</a>
+  <div class="container">
+    <h2 style="text-align:center; color:#2d2e52;">🚀 Join Active JokerLudo WhatsApp Groups</h2>
+
+    <!-- Group Example -->
+    <div class="group-card">
+      <h3>♟ JokerLudo Champions Group</h3>
+      <p><strong>Type:</strong> Competitive Matches & Daily Rewards</p>
+      <p><strong>Status:</strong> ✅ Active</p>
+      <a href="https://chat.whatsapp.com/EXAMPLEGROUP1" target="_blank" class="join-btn">Join Group</a>
+    </div>
+
+    <div class="group-card">
+      <h3>🔥 JokerLudo 24x7 Battles</h3>
+      <p><strong>Type:</strong> 24/7 Open Lobbies & Casual Matches</p>
+      <p><strong>Status:</strong> ✅ Active</p>
+      <a href="https://chat.whatsapp.com/EXAMPLEGROUP2" target="_blank" class="join-btn">Join Group</a>
+    </div>
+
+    <div class="group-card">
+      <h3>💸 JokerLudo Paid Tournament Room</h3>
+      <p><strong>Type:</strong> Paid Entry • Cash Prizes</p>
+      <p><strong>Status:</strong> ✅ Limited Seats</p>
+      <a href="https://chat.whatsapp.com/EXAMPLEGROUP3" target="_blank" class="join-btn">Join Group</a>
+    </div>
+
+    <!-- Add more groups as needed -->
   </div>
 
   <footer>
+    <div class="footer-links">
+      <a href="index.html">Home</a>
+      <a href="rules.html">Rules</a>
+      <a href="join.html">Join</a>
+      <a href="addgroup.html">Add Group</a>
+      <a href="privacy.html">Privacy</a>
+      <a href="contact.html">Contact</a>
+    </div>
     <p>© 2025 JokerLudo Group. All Rights Reserved.</p>
   </footer>
 
